js/js.translator/testData/incremental/invalidation/addUpdateRemoveDependentFile/lib2/l2.1.kt
inline fun qux() = foo0() + foo1()
